# erust-blinker

./: Cargo.toml  memory.x
.cargo/: config.toml
.github/workflows/: cargo-build.yaml
src/: main.rs
