[package]
authors = ["Andrey Sverdlichenko <blaze@rusty.zone>"]
edition = "2021"
name = "erust-blinker"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
stm32g0xx-hal = { version = "0.2", features = ["stm32g071", "rt"] }

panic-probe = { version = "0.3", features = ["print-rtt"] }
rtt-target = "0.5"

# this lets you use `cargo fix`
[[bin]]
name = "erust-blinker"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true      # symbols are nice and they don't increase the size on Flash
lto = true        # better optimizations
opt-level = "s"
